ADD psql and http handlers
